add the issue link into the h1

--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,7 @@
   <title>Reproduction Demo for #2184</title>
 </head>
 <body>
-  <h1>Reproduction Demo for #2184</h1>
+  <h1>Reproduction Demo for <a href="https://github.com/coollabsio/coolify/issues/2184">#2184</a></h1>
   <p>Showing Preview Deployment port issue when using docker-compose</p>
 
   <h2>References</h2>
